...
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="34">
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" semanticContentAttribute="playback" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="playbutton.png" translatesAutoresizingMaskIntoConstraints="NO" id="qyR-rP-FaH" userLabel="Play Image View">
                    <rect key="frame" x="260" y="347" width="80" height="80"/>
                    <accessibility key="accessibilityConfiguration" hint="The Play Button Image" label="Play">
                        <bool key="isElement" value="YES"/>
                    </accessibility>
                    <constraints>
                        <constraint firstAttribute="height" constant="80" id="8RT-Hu-x0x"/>
                        <constraint firstAttribute="width" constant="80" id="uGP-Vo-J9T"/>
                    </constraints>
...
